Ajout des pages Vos Réservations + Ma Réservation

--- a/pages/reservations/allResa.html
+++ b/pages/reservations/allResa.html
@@ -1,6 +1,6 @@
 <div class="hero-scene text-center text-white">
     <div class="hero-scene-content">
-        <h1>Mes Réservations</h1>
+        <h1>Vos Réservations</h1>
     </div>
 </div>
 
