--- a/pages/auth/signup.html
+++ b/pages/auth/signup.html
@@ -7,26 +7,44 @@
     <form>
         <div class="mb-3">
             <label for="NomInput" class="form-label">Nom</label>
-            <input type="text" class="form-control" id="NomInput" placeholder="Votre nom" name="Nom"> 
+            <input type="text" class="form-control" id="NomInput" placeholder="Votre nom" name="Nom">
+            <div class="invalid-feedback">
+                Le nom est requis
+              </div>  
         </div>
         <div class="mb-3">
             <label for="PrenomInput" class="form-label">Prénom</label>
-            <input type="text" class="form-control" id="PrenomInput" placeholder="Votre prénom" name="Prenom"> 
+            <input type="text" class="form-control" id="PrenomInput" placeholder="Votre prénom" name="Prenom">
+            <div class="invalid-feedback">
+                Le prénom est requis
+              </div> 
         </div>
         <div class="mb-3">
           <label for="EmailInput" class="form-label">Email</label>
           <input type="email" class="form-control" id="EmailInput" placeholder="test@mail.fr" name="Email"> 
+          <div class="invalid-feedback">
+            L'adresse email n'est pas au bon format
+          </div>
         </div>
         <div class="mb-3">
           <label for="PasswordInput" class="form-label">Mot de passe</label>
           <input type="password" class="form-control" id="PasswordInput" name="Password">
+          <div class="invalid-feedback">
+            Le mot de passe n'est pas assez robuste ! Il faut au minimum 8 caractères, comprenant au moins 1 lettre majuscule, 1 lettre minuscule, 1 chiffre et 1 caractère spéciale
+          </div>
+          <div class="valid-feedback">
+            Le mot de passe est robuste
+          </div>
         </div>
         <div class="mb-3">
             <label for="ValidatePasswordInput" class="form-label">Confirmer votre mot de passe</label>
             <input type="password" class="form-control" id="ValidatePasswordInput" name="PasswordConfirm">
+            <div class="invalid-feedback">
+                La confirmation n'est pas identique au mot de passe
+            </div>
           </div>
         <div class="text-center">
-            <button type="submit" class="btn btn-primary">Inscription</button>
+            <button type="submit" class="btn btn-primary" id="btn-validation-inscription">Inscription</button>
         </div>
     </form>
     <div class="text-center pt-3">
