--- a/pages/auth/signin.html
+++ b/pages/auth/signin.html
@@ -13,12 +13,15 @@
       <div class="mb-3">
         <label for="PasswordInput" class="form-label">Mot de passe</label>
         <input type="password" class="form-control" id="PasswordInput" name="Password">
+        <div class="invalid-feedback">
+          Le mail et/ou le mot de passe ne correspondent pas
+        </div>
       </div>
       <div class="text-center">
-          <button type="submit" class="btn btn-primary">Connexion</button>
+          <button type="button" class="btn btn-primary" id="btnSignin">Connexion</button>
       </div>
   </form>
   <div class="text-center pt-3">
-      <a href="/signup">Vous n’avez pas de compte ? Inscrivez-vous ici !</a>
+      <a href="/signup">Vous n’avez pas de compte ? Inscrivez-vous ici !</a>
   </div>
 </div>
